[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["utils", "year_2022", "year_2023"]

[workspace.dependencies]
utils = { path = "utils" }
year_2022 = { path = "year_2022" }
year_2023 = { path = "year_2023" }
